--- a/pages/question.html
+++ b/pages/question.html
@@ -1,5 +1,5 @@
 <html>
-<head>
+<head>~
     <title>Question Page</title>
 </head>
 <body>
@@ -8,10 +8,18 @@
         <li>Why use Git?</li>
         <li>Soal 4</li>
         <li>Soal 5</li>
+        <li>Soal 6</li>
+        ...
+        ...
+        ...
+        <li>Soal 1000</li>
     <ul>
     <h1>What is Git</h1>
     <p>Apa itu git init?</p>
-    <p>Kapan kita mengguanakn git init?</p>
-    <h1>Soal 5</h1>
+    <p>Kapan kita mengguanakan git init?</p>
+    ...
+    ...
+    ...
+    <h1>Soal 1000</h1>
 </body>
 </html>
